# volt

./: .gitignore  install.sh  install_local.sh  pyproject.toml  volt.spec
.github/workflows/: auto_tag.yaml  homebrew.yaml  release.yml
scripts/: auto_tag.sh
src/volt/: __init__.py  add_cli.py  cli.py
src/volt/core/: dependencies.py  injectors.py  project.py  prompts.py  template.py
src/volt/stacks/: __init__.py  constants.py  fastapi.py
src/volt/stacks/fastapi/: app_creator.py  cli.py  config_blocks.py  dependencies.py  helpers.py  injectors.py  scaffold.py  template_utils.py
src/volt/templates/fastapi/auth_bearer/app/dependencies/: auth.py
src/volt/templates/fastapi/auth_bearer_model/sqlmodel/app/dependencies/: auth.py
src/volt/templates/fastapi/base/app/: main.py
src/volt/templates/fastapi/base/app/core/: config.py
src/volt/templates/fastapi/base/app/routers/: main.py
src/volt/templates/fastapi/db_mongo/app/core/: db.py
src/volt/templates/fastapi/db_sqlmodel/app/core/: db.py
src/volt/templates/fastapi/docker/: Dockerfile
src/volt/templates/fastapi/scaffold/app/routers/: routes.py
src/volt/templates/fastapi/scaffold/db_mongo/app/repositories/: base.py
src/volt/templates/fastapi/scaffold/db_mongo/app/routers/: routes.py
src/volt/templates/fastapi/scaffold/db_mongo/app/services/: service.py
src/volt/templates/fastapi/taskiq/app/core/: tasks.py
tests/: test_add_command.py  test_auth_bearer.py  test_auth_cookie.py  test_base.py  test_cli_fastapi.py  test_db.py
tests/utils/: db_utils.py  sandbox_runner.py
(+4 files in other folders)
