[project]
name = "volt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vishwa Kumaran", email = "vishwaa33400@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "black>=25.9.0",
    "questionary>=2.1.1",
    "typer>=0.19.2",
]

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "../../Tests/test_uv",
]

[dependency-groups]
dev = [
    "fastapi>=0.121.0",
    "httpx>=0.28.1",
    "pytest>=8.4.2",
]

[project.scripts]
volt = "volt.cli:main"
